feat: consistent .formatted usage